--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,13 @@
-﻿aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-alembic==1.14.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.8.0
-attrs==24.3.0
-bcrypt==4.2.1
-blinker==1.9.0
-cachetools==5.5.0
-captcha==0.6.0
-certifi==2024.12.14
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-distro==1.9.0
-dnspython==1.16.0
-docstring_parser==0.16
-ecdsa==0.19.0
-email_validator==2.2.0
-extra-streamlit-components==0.1.71
+pip install streamlit
+pip install requests
+pip install pandas
 fastapi==0.115.6
-fastapi-cli==0.0.7
-frozenlist==1.5.0
-gitdb==4.0.12
-GitPython==3.1.44
-greenlet==3.1.1
-groq==0.15.0
-h11==0.14.0
-httpcore==1.0.7
-httptools==0.6.4
-httpx==0.28.1
-idna==3.10
-itsdangerous==2.2.0
-Jinja2==3.1.5
-jiter==0.8.2
-jose==1.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-Mako==1.3.8
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-multidict==6.1.0
-narwhals==1.22.0
-numpy==2.2.1
-openai==0.28.0
-orjson==3.10.14
-packaging==24.2
-pandas==2.2.3
-passlib==1.7.4
-phidata==2.7.8
-pillow==11.1.0
-propcache==0.2.1
-protobuf==5.29.3
-psycopg2==2.9.10
-pyarrow==19.0.0
-pyasn1==0.6.1
-pydantic==2.10.5
-pydantic-extra-types==2.10.2
-pydantic-settings==2.7.1
-pydantic_core==2.27.2
-pydeck==0.9.1
-Pygments==2.19.1
-PyJWT==2.10.1
-pymongo==3.10.1
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-jose==3.3.0
-python-multipart==0.0.20
-pytz==2024.2
-PyYAML==6.0.2
-referencing==0.36.1
-requests==2.32.3
-rich==13.9.4
-rich-toolkit==0.13.2
-rpds-py==0.22.3
-rsa==4.9
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-SQLAlchemy==2.0.37
-starlette==0.41.3
-streamlit==1.41.1
-streamlit-authenticator==0.4.1
-tenacity==9.0.0
-toml==0.10.2
-tomli==2.2.1
-tornado==6.4.2
-tqdm==4.67.1
-typer==0.15.1
-typing==3.7.4.3
-typing_extensions==4.12.2
-tzdata==2024.2
-ujson==5.10.0
-urllib3==2.3.0
 uvicorn==0.34.0
-watchdog==6.0.0
-watchfiles==1.0.4
-websockets==14.1
-yarl==1.18.3
+sqlalchemy==2.0.37
+pydantic==2.10.5
+passlib==1.7.4
+python-jose==3.3.0
+python-dotenv==1.0.1
+psycopg2==2.9.10
+python-multipart
+bcrypt
